--- a/src/main/resources/org/example/firehabits/current-habit-view.fxml
+++ b/src/main/resources/org/example/firehabits/current-habit-view.fxml
@@ -14,7 +14,7 @@
 <AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="319.0" style="-fx-background-color: #1C1920;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.firehabits.FireHabitsViewController">
    <Button fx:id="actionButton" layoutX="40.0" layoutY="147.0" mnemonicParsing="false" onAction="#onSwitchRecord" prefHeight="185.0" prefWidth="185.0" style="-fx-background-color: transparent;">
       <graphic>
-         <ImageView fitHeight="213.0" fitWidth="221.0">
+         <ImageView fx:id="buttonImageView" fitHeight="213.0" fitWidth="221.0">
             <Image url="@images/fire.png" />
          </ImageView>
       </graphic>
